<resources>
    <string name="app_name">Rainy Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_first">First Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_forget_password">Forgot Password?</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_add_Friend">Add Friend</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="forgot_description">Provide your account\'s email address to reset your password</string>
    <string name="forgot_button_next">Reset Password</string>
    <string name="chat_new_chatroom">New Chatroom</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_again">New Password Again</string>
    <string name="title_password">Change Password</string>
    <string name="password_update">Update Password</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="change_name">Change Name</string>
    <string name="account_details">Account Details</string>
    <string name="registration">Account Registration</string>
    <string name="action_link">Full Post</string>
    <string name="add_friend_description">Add your friend on the Rainy Chat App!</string>
    <string name="request">Request</string>

    <string name="switch_sign_in">Stay signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>

    <string name="base_url_service">https://tcss450-weather-chat.herokuapp.com/</string>
    <string name="back">Back</string>
    <string name="label_location">Current location:</string>
    <string name="hint_zip_code">ZIP Code</string>
    <string name="weather_tab_current">Current</string>
    <string name="weather_tab_24_hour">24 Hour</string>
    <string name="weather_tab_5_day">5 Day</string>
    <string name="weather_tab_map">Map</string>
    <string name="weather_search_button">Search with ZIP Code</string>
    <string name="hint_search_friends">Search</string>
    <string name="search">search</string>
    <string name="content_description_search">search chat</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">favorite the chat</string>
    <string name="add_friend">Add Friend</string>
    <string name="contacts_tab_friends">Friends</string>
    <string name="contacts_tab_incoming_requests">Incoming Requests</string>
    <string name="contacts_tab_outgoing_requests">Outgoing Requests</string>
    <string name="hint_add_friend_email">Email</string>
    <string name="title_change_name">Change Name</string>
    <string name="action_update_name">Update Name</string>
    <string name="add_chatroom">Add Chatroom</string>
    <string name="title_create_chat">Create a chatroom</string>
    <string name="new_chatroom_description">Create a new chatroom!</string>
    <string name="new_chatroom">New Chatroom</string>
    <string name="title_new_chatroom">New Chat</string>
    <string name="hint_new_chat_name">Name</string>
    <string name="title_add">Add to Chatroom</string>
    <string name="add_to_chatroom_description">Add someone to this chatroom!</string>
    <string name="hint_add_to_chat">Email</string>
    <string name="add_to_chat">Add</string>
    <string name="review_participants">review participants</string>
    <string name="title_remove">Remove Member</string>
    <string name="remove_member_description">Remove someone from this chatroom</string>
    <string name="remove_member">Remove</string>

</resources>