<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_groups_black_24dp"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_chatroom"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/title_weather" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_24dp"
        android:title="Account" />
</menu>