<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <TextView
        android:id="@+id/text_account_details"
        android:layout_width="197dp"
        android:layout_height="104dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/account_details"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/change_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_account_details" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_name" />

    <Button
        android:id="@+id/button_account_signout"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/action_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_password" />

    <Switch
        android:id="@+id/switch_account_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:showText="false"
        android:text="Fahrenheit As Default"
        android:textOff="Fahrenheit"
        android:textOn="Celcius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_account_signout"
        tools:checked="false" />

</androidx.constraintlayout.widget.ConstraintLayout>