<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.changepassword.ChangePasswordFragment">

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="197dp"
        android:layout_height="104dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/title_password"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_old_password"
        android:layout_width="386dp"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:hint="@string/password_old"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_password"
        android:layout_width="386dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_old_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_password_again"
        android:layout_width="386dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password_new_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_new_password_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_update_password_attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="98dp"
        android:text="@string/password_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_new_password_again" />
</androidx.constraintlayout.widget.ConstraintLayout>