<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.forgotpassword.ForgotPasswordFragment">

    <Button
        android:id="@+id/button_forgot_get_password"
        android:layout_width="395dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/forgot_button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_forget_email" />

    <EditText
        android:id="@+id/edit_forget_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Removed this line from the email text box -Hussein -->
    <!-- android:text="uwnetid5@fake.email.com" -->

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="197dp"
        android:layout_height="104dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="Forgot Password"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_forgot_description"
        android:layout_width="248dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />


</androidx.constraintlayout.widget.ConstraintLayout>